# g2o_ba_example

./: CMakeLists.txt  README.md  build.bat  main.cpp
cmake_modules/: FindCSparse.cmake  eigen3.cmake  g2o.cmake
